# advent25

./: .envrc  .gitignore  README.md  pyproject.toml
src/advent/: day01.py  day02.py  day03.py  day04.py  day05.py  day09.py
tests/: test_day01.py  test_day02.py  test_day03.py
